--- a/package.json
+++ b/package.json
@@ -2,27 +2,30 @@
   "name": "taiwan-tour-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chihtinglin.github.io/taiwan-tour-website",
   "dependencies": {
-    "@material-ui/core": "^5.0.0-beta.5",
+    "@craco/craco": "^6.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "autoprefixer": "^9",
     "gh-pages": "^3.2.3",
     "jssha": "^3.2.0",
     "normalize.css": "^8.0.1",
+    "postcss": "^7",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
   },
